well, this time I realize the dummy command version, my program can now call the command line

--- a/Runanubisandplot.vcxproj.filters
+++ b/Runanubisandplot.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\readfile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\board.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tinyxml\tinystr.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\readfile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\board.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
