--- a/Runanubisandplot.vcxproj
+++ b/Runanubisandplot.vcxproj
@@ -153,6 +153,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Runanubisandplot.cpp" />
+    <ClCompile Include="src\board.cpp" />
     <ClCompile Include="src\fileelement.cpp" />
     <ClCompile Include="src\readfile.cpp" />
     <ClCompile Include="tinyxml\tinystr.cpp" />
@@ -161,6 +162,7 @@
     <ClCompile Include="tinyxml\tinyxmlparser.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\board.h" />
     <ClInclude Include="src\fileelement.h" />
     <ClInclude Include="src\readfile.h" />
     <ClInclude Include="tinyxml\tinystr.h" />
