--- a/filedemo/conf.cfg
+++ b/filedemo/conf.cfg
@@ -7,7 +7,7 @@
    <end> &quot;2019-01-01 23:59:30&quot; </end>
    <sys> GPS GLO GAL BDS SBS QZS </sys>
    <int> 30 </int>
-   <rec> SINA ABMF</rec>
+   <rec> SINA ABMF WROC MAJU UNB3 YEL2 KRGG GOPE NICO ONSA</rec>
  </gen>
 
  <inputs chk_nav="true">
